# docs/swagger.json
@@ -1,18 +1,151 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "Must Have API with auhtentication",
-        "title": "Must Have API",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "Felipe Aragão",
-            "email": "felipe.thiago10@gmail.com"
+            "email": "felpe.thiago10@gmail.com"
         },
-        "version": "1.0"
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        }
     },
-    "host": "localhost:3000",
-    "basePath": "/api/v1",
     "paths": {
+        "/deals": {
+            "post": {
+                "description": "Create deal",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "deals"
+                ],
+                "summary": "Create deal",
+                "parameters": [
+                    {
+                        "description": "deal request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/create_deal.DealInputDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/deals/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a deal",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "deals"
+                ],
+                "summary": "Get a deal",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "deal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.Deal"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Error"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update a deal",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "deals"
+                ],
+                "summary": "Update a deal",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "deal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "deal request",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/update_deal.DealInputDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "post": {
                 "description": "Create user",
@@ -128,7 +261,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/update_user.UserInputDTO"
+                            "$ref": "#/definitions/create_user.UserInputDTO"
                         }
                     }
                 ],
@@ -217,6 +350,66 @@
                 }
             }
         },
+        "create_deal.DealInputDTO": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "location": {
+                    "type": "object",
+                    "properties": {
+                        "address": {
+                            "type": "string"
+                        },
+                        "city": {
+                            "type": "string"
+                        },
+                        "lat": {
+                            "type": "number"
+                        },
+                        "lng": {
+                            "type": "number"
+                        },
+                        "state": {
+                            "type": "string"
+                        },
+                        "zip_code": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "photos": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "trade_for": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                },
+                "urgency": {
+                    "type": "object",
+                    "properties": {
+                        "limit_date": {
+                            "type": "string"
+                        },
+                        "type": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
         "create_user.UserInputDTO": {
             "type": "object",
             "properties": {
@@ -257,7 +450,59 @@
                 }
             }
         },
-        "entity.Location": {
+        "entity.Deal": {
+            "type": "object",
+            "required": [
+                "description",
+                "location",
+                "type",
+                "urgency",
+                "user_id",
+                "value"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string",
+                    "maxLength": 1000,
+                    "minLength": 3
+                },
+                "id": {
+                    "type": "string"
+                },
+                "location": {
+                    "$ref": "#/definitions/entity.LocationDeal"
+                },
+                "photos": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "trade_for": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "urgency": {
+                    "$ref": "#/definitions/entity.Urgency"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number",
+                    "minimum": 0
+                }
+            }
+        },
+        "entity.LocationDeal": {
             "type": "object",
             "required": [
                 "address",
@@ -296,6 +541,59 @@
                 }
             }
         },
+        "entity.LocationUser": {
+            "type": "object",
+            "required": [
+                "address",
+                "city",
+                "lat",
+                "lng",
+                "state",
+                "zip_code"
+            ],
+            "properties": {
+                "address": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3
+                },
+                "city": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3
+                },
+                "lat": {
+                    "type": "number"
+                },
+                "lng": {
+                    "type": "number"
+                },
+                "state": {
+                    "type": "string",
+                    "maxLength": 2,
+                    "minLength": 2
+                },
+                "zip_code": {
+                    "type": "integer",
+                    "maximum": 99999999,
+                    "minimum": 10000000
+                }
+            }
+        },
+        "entity.Urgency": {
+            "type": "object",
+            "required": [
+                "type"
+            ],
+            "properties": {
+                "limit_date": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "integer"
+                }
+            }
+        },
         "entity.User": {
             "type": "object",
             "required": [
@@ -315,7 +613,7 @@
                     "type": "string"
                 },
                 "location": {
-                    "$ref": "#/definitions/entity.Location"
+                    "$ref": "#/definitions/entity.LocationUser"
                 },
                 "login": {
                     "type": "string",
@@ -340,10 +638,10 @@
                 }
             }
         },
-        "update_user.UserInputDTO": {
+        "update_deal.DealInputDTO": {
             "type": "object",
             "properties": {
-                "email": {
+                "description": {
                     "type": "string"
                 },
                 "id": {
@@ -372,11 +670,34 @@
                         }
                     }
                 },
-                "login": {
+                "photos": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "trade_for": {
                     "type": "string"
                 },
-                "name": {
+                "type": {
+                    "type": "integer"
+                },
+                "urgency": {
+                    "type": "object",
+                    "properties": {
+                        "limit_date": {
+                            "type": "string"
+                        },
+                        "type": {
+                            "type": "integer"
+                        }
+                    }
+                },
+                "user_id": {
                     "type": "string"
+                },
+                "value": {
+                    "type": "number"
                 }
             }
         }
